fixed overflow

--- a/wp-content/themes/adaptly/css/adaptly.css
+++ b/wp-content/themes/adaptly/css/adaptly.css
@@ -1,7 +1,7 @@
 
 body * {  box-sizing: border-box;}
 body {  margin:0; text-align: center;font-family: "open-sans",sans-serif; font-style: normal; font-weight: 300;}
-body.home.page {	overflow-y: hidden;}
+/*body.home.page {	overflow-y: hidden;}*/
 img { max-width: 100%; height: auto;}
 .wide-cont { width: 90%; margin: 0 auto; max-width: 1215px}
 .mid-cont {margin: 0 auto;}
